update full code

--- a/about.html
+++ b/about.html
@@ -119,17 +119,17 @@
     <div class="sticky">
         <nav class="sticky-nav">
             <ul>
-                <li><a href="#">CEO Voice</a></li>
-                <li><a href="#">Vision</a></li>
-                <li><a href="#">Philosophy</a></li>
-                <li><a href="#">Core Values</a></li>
-                <li><a href="#">Company Info</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#block_01">CEO Voice</a></li>
+                <li><a href="#block_02">Vision</a></li>
+                <li><a href="#block_03">Philosophy</a></li>
+                <li><a href="#block_04">Core Values</a></li>
+                <li><a href="#block_05">Company Info</a></li>
+                <li><a href="#block_06">Contact</a></li>
             </ul>
         </nav>
     </div>
     <div class="content">
-        <div class="block">
+        <div class="block" id="block_01">
             <div class="block-title2">ベトナム開発拠点のご紹介</div>
             <div class="ceo-content">
                 <div class="left">
@@ -148,14 +148,14 @@
             </div>
         </div>
 
-        <div class="block">
+        <div class="block" id="block_02">
             <div class="block-title2">Vision</div>
             <div class="vision-content">
                 <p>技術力及び柔軟性を通じて社会に貢献し、世界的なリーダーテクノロジー企業になります。</p>
             </div>
         </div>
 
-        <div class="block">
+        <div class="block" id="block_03">
             <div class="block-title2">Philosophy</div>
             <div class="Philosophy-content">
                 <p>Eliud Kipchogeは「No human is limited」と言いました。テクノロジーの支援により、私たちはマラソン選手のように速くても丈夫に前進します。どんなマラソン競走でも、目標達成を支援することを目的とした、応援してくださるクルーが重要です。NETKO Solutionはクルーになるのみならず、お客様の最適なコンパニオンとして強い関係を結んでいきます。コアバリューとスピリットに向けて、
@@ -163,7 +163,7 @@
             </div>
         </div>
 
-        <div class="block">
+        <div class="block" id="block_04">
             <div class="block-title2">Core Values</div>
             <div class="value-content">
                 <p>創業から5年間以上に渡り、NETKOの成長と共に多くの困難を経験しましたが、お客様からの貴重なご支援や従業員の協力のお陰で、NETKOは様々な困難を乗り越えながらも順調に成長しております。</p>
@@ -240,7 +240,7 @@
             </div>
         </div>
 
-        <div class="block">
+        <div class="block" id="block_05">
             <div class="block-title2">アジアを代表するデCompanyInfo</div>
             <div class="company-content">
                 <div class="left">
@@ -272,7 +272,7 @@
             </div>
         </div>
 
-        <div class="block">
+        <div class="block" id="block_06">
             <div class="block-title2">アジアを代表するデContact</div>
             <div class="contact-content">
                 <div class="text">業務をより円滑・効率的に</div>
