--- a/index.html
+++ b/index.html
@@ -463,22 +463,24 @@
     </div>
 </section>
 
-<section class="partner">
-    <div class="container">
-        <div class="swiper partnerSwiper" data-aos="fade-up" data-aos-delay="200" data-aos-duration="600">
-            <div class="swiper-wrapper">
-                <div class="swiper-slide"><img src="./img/logo.png" alt=""/></div>
-                <div class="swiper-slide"><img src="./img/logo.png" alt=""/></div>
-                <div class="swiper-slide"><img src="./img/logo.png" alt=""/></div>
-                <div class="swiper-slide"><img src="./img/logo.png" alt=""/></div>
-                <div class="swiper-slide"><img src="./img/logo.png" alt=""/></div>
-                <div class="swiper-slide"><img src="./img/logo.png" alt=""/></div>
-                <div class="swiper-slide"><img src="./img/logo.png" alt=""/></div>
-            </div>
-            <div class="swiper-pagination"></div>
-        </div>
-    </div>
-</section>
+<!--<section class="partner">-->
+<!--    <div class="container">-->
+<!--        <div class="swiper partnerSwiper" data-aos="fade-up" data-aos-delay="200" data-aos-duration="600">-->
+<!--            <div class="swiper-wrapper">-->
+<!--                <div class="swiper-slide"><img src="./img/logo.png" alt=""/></div>-->
+<!--                <div class="swiper-slide"><img src="./img/logo.png" alt=""/></div>-->
+<!--                <div class="swiper-slide"><img src="./img/logo.png" alt=""/></div>-->
+<!--                <div class="swiper-slide"><img src="./img/logo.png" alt=""/></div>-->
+<!--                <div class="swiper-slide"><img src="./img/logo.png" alt=""/></div>-->
+<!--                <div class="swiper-slide"><img src="./img/logo.png" alt=""/></div>-->
+<!--                <div class="swiper-slide"><img src="./img/logo.png" alt=""/></div>-->
+<!--            </div>-->
+<!--            <div class="swiper-pagination"></div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</section>-->
+
+<section class="block_img"></section>
 
 <section class="container block_06">
     <div class="block-title text-center" data-aos="fade-up" data-aos-delay="200" data-aos-duration="600">Blogs</div>
