--- a/services.html
+++ b/services.html
@@ -464,12 +464,12 @@
                     </div>
                 </div>
                 <div class="accordion-item">
-                    <h2 class="accordion-header" id="headingFiveFaqs">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFiveFaqs" aria-expanded="false" aria-controls="collapseFive">
+                    <h2 class="accordion-header" id="headingSixFaqs">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSixFaqs" aria-expanded="false" aria-controls="collapseSix">
                             アイデアを実現する為に開発チームとコミュニケーションをできれば最高と思います。
                         </button>
                     </h2>
-                    <div id="collapseFiveFaqs" class="accordion-collapse collapse" aria-labelledby="headingFiveFaqs" data-bs-parent="#accordionFaqs">
+                    <div id="collapseSixFaqs" class="accordion-collapse collapse" aria-labelledby="headingSixFaqs" data-bs-parent="#accordionFaqs">
                         <div class="accordion-body">
                             <p>テクノロジーを通じてお客様のアイデアを実現することに一部貢献して光栄に思います。 NETKOでは、コミュニケーター、BrSE、プロダクトオーナーがN2以上の日本語能力を持ち、ビジネス分野に関連する日本及びベトナムの大学を卒業しました。 N4以上の日本語能力及び良英語能力を持ち開発者は、顧客の要件を明確に理解することを保証します。</p>
                         </div>
