add content services

--- a/services.html
+++ b/services.html
@@ -218,8 +218,8 @@
                 <div class="numb">02</div>
                 <div class="title">設計と実装</div>
                 <ul>
-                    <li>基本デザイン</li>
-                    <li>システム設計</li>
+                    <li>基本設計</li>
+                    <li>詳細設計</li>
                 </ul>   
             </div>
             <div class="item" data-aos="fade-up" data-aos-delay="600" data-aos-duration="600">
