Change content website

--- a/about.html
+++ b/about.html
@@ -100,17 +100,16 @@
 
 <section class="heading">
     <div class="container">
-        <h1>アジアを代表するデジタル化支援会社</h1>
-        <p>我々は、日本の有力サービス (SaaS)ベンダー 、 パッケージベンダーなど200社以上のIT企業に対して 高品質な開発サービスを提供し、日本のIT産業のビジネス拡大に大きくに貢献しています。</p>
+        <h1>COMPANY</h1>
+        <p>会社概要</p>
     </div>
 </section>
 
 <section class="container">
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#">ジャパン</a></li>
-            <li class="breadcrumb-item"><a href="#">会社情報</a></li>
-            <li class="breadcrumb-item active" aria-current="page">ご挨拶</li>
+            <li class="breadcrumb-item"><a href="#">TOP</a></li>
+            <li class="breadcrumb-item active" aria-current="page">会社概要</li>
         </ol>
     </nav>
 </section>
@@ -139,7 +138,7 @@
                         毎日全力を尽くしています。お客様から信頼していただき大変嬉しくありがとうございます。</p>
                     <div class="info">
                         <label>株式会社NETKO CEO</label>
-                        <strong>Hoang Giang Bien - カタカナ</strong>
+                        <strong>Hoang Giang Bien - ホアン・ジャン・ビエン </strong>
                     </div>
                 </div>
                 <div class="img">
@@ -247,7 +246,7 @@
                     <div class="name">NETKO Solution .JSC</div>
                     <div class="info-box">
                         <label>CEO</label>
-                        <div class="text">Hoang Giang Bien - カタカナ</div>
+                        <div class="text">Hoang Giang Bien - ホアン・ジャン・ビエン </div>
                     </div>
                     <div class="info-box">
                         <label>ハノイ本社</label>
@@ -262,7 +261,7 @@
                         <div class="text">(+84)359-612-999</div>
                     </div>
                     <div class="info-box">
-                        <label>Email</label>
+                        <label>Eメール</label>
                         <div class="text">contact@netko-solution.com</div>
                     </div>
                 </div>
