--- a/contact.html
+++ b/contact.html
@@ -100,16 +100,16 @@
 
 <section class="heading">
     <div class="container">
-        <h1>アジアを代表するデジタル化支援会社</h1>
-        <p>我々は、日本の有力サービス (SaaS)ベンダー 、 パッケージベンダーなど200社以上のIT企業に対して 高品質な開発サービスを提供し、日本のIT産業のビジネス拡大に大きくに貢献しています。</p>
+        <h1>CONTACT</h1>
+        <p>お問い合わせ</p>
     </div>
 </section>
 
 <section class="container">
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#">ジャパン</a></li>
-            <li class="breadcrumb-item active" aria-current="page">ご挨拶</li>
+            <li class="breadcrumb-item"><a href="#">TOP</a></li>
+            <li class="breadcrumb-item active" aria-current="page">お問い合わせ</li>
         </ol>
     </nav>
 </section>
@@ -158,8 +158,8 @@
                 </i>
                 <div class="info">
                     <label>オフィスの住所</label>
-                    <p>5th Floor, Intracom Building<br/>
-                        82 Dich Vong Hau St., Cau Giay, Hanoi</p>
+                    <p>5th floor, NIC building<br/>
+                        no 7 Ton that Thuyet St., Cau Giay, Hanoi, Vietnam</p>
                 </div>
             </div>
             <div class="item">
@@ -170,7 +170,7 @@
                 </i>
                 <div class="info">
                     <label>Eメール</label>
-                    <p><a href="mailto:support@netko.com.vn">support@netko.com.vn</a></p>
+                    <p><a href="mailto:contact@netko.com">contact@netko.com</a></p>
                 </div>
             </div>
             <div class="item">
@@ -181,7 +181,7 @@
                 </i>
                 <div class="info">
                     <label>電話に連絡する</label>
-                    <p>(+81)45-228-9010</p>
+                    <p>(+84)-359-612-999</p>
                 </div>
             </div>
         </div>
@@ -189,8 +189,9 @@
 </section>
 
 <map class="map">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2832.214794491745!2d105.85420632552392!3d21.02468583619635!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135abebf87e0011%3A0x647af200da508d2b!2zTmjDoCBIw6F0IEzhu5tuIEjDoCBO4buZaQ!5e0!3m2!1svi!2s!4v1638965708245!5m2!1svi!2s" width="100%" height="420" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d378.1181949754895!2d105.78451292396483!3d21.0268922148366!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135abd7a5835c99%3A0xf7b50384c10c29ce!2zVHJ1bmcgdMOibSDEkOG7lWkgbeG7m2kgc8OhbmcgdOG6oW8gUXXhu5FjIGdpYSAtIEPhuqd1IEdp4bqleSAoTklDIENhdSBHaWF5KQ!5e0!3m2!1sen!2s!4v1639032649242!5m2!1sen!2s" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 </map>
+
 
 <footer class="footer">
     <div class="container">
@@ -219,7 +220,6 @@
                     </svg>
                 </a>
                 <div class="desc">
-                    <p>NTQは技術に高い関心を持っています。CRAZY TEAMと呼ばれるR&D（技術研究開発）専門のチームを抱え、提供する3つのサービスを支えています。</p>
                     <p>将来を見通した技術に精通することで地盤から技術を固め、来るべき日に備え、お客様の思いの実現のために尽力します。</p>
                 </div>
             </div>
