--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -100,16 +100,16 @@
 
 <section class="heading">
     <div class="container">
-        <h1>アジアを代表するデジタル化支援会社</h1>
-        <p>我々は、日本の有力サービス (SaaS)ベンダー 、 パッケージベンダーなど200社以上のIT企業に対して 高品質な開発サービスを提供し、日本のIT産業のビジネス拡大に大きくに貢献しています。</p>
+        <h1>Privacy Policy</h1>
+        <p>個人情報保護について</p>
     </div>
 </section>
 
 <section class="container">
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#">ジャパン</a></li>
-            <li class="breadcrumb-item active" aria-current="page">ご挨拶</li>
+            <li class="breadcrumb-item"><a href="#">TOP</a></li>
+            <li class="breadcrumb-item active" aria-current="page">個人情報保護について</li>
         </ol>
     </nav>
 </section>
@@ -207,7 +207,6 @@
                     </svg>
                 </a>
                 <div class="desc">
-                    <p>NTQは技術に高い関心を持っています。CRAZY TEAMと呼ばれるR&D（技術研究開発）専門のチームを抱え、提供する3つのサービスを支えています。</p>
                     <p>将来を見通した技術に精通することで地盤から技術を固め、来るべき日に備え、お客様の思いの実現のために尽力します。</p>
                 </div>
             </div>
