--- a/services.html
+++ b/services.html
@@ -100,24 +100,23 @@
 
 <section class="heading">
     <div class="container">
-        <h1>アジアを代表するデジタル化支援会社</h1>
-        <p>我々は、日本の有力サービス (SaaS)ベンダー 、 パッケージベンダーなど200社以上のIT企業に対して 高品質な開発サービスを提供し、日本のIT産業のビジネス拡大に大きくに貢献しています。</p>
+        <h1>SERVICE</h1>
+        <p>事業内容</p>
     </div>
 </section>
 
 <section class="container">
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#">ジャパン</a></li>
-            <li class="breadcrumb-item"><a href="#">会社情報</a></li>
-            <li class="breadcrumb-item active" aria-current="page">ご挨拶</li>
+            <li class="breadcrumb-item"><a href="#">TOP</a></li>
+            <li class="breadcrumb-item active" aria-current="page">サービス</li>
         </ol>
     </nav>
 </section>
 
 <section class="container block_services">
-    <div class="block-title text-center" data-aos="fade-up" data-aos-delay="200" data-aos-duration="600">ソリューション</div>
-    <p class="desc text-center" data-aos="fade-up" data-aos-delay="400" data-aos-duration="600">様々なテクノロジーは、製品の品質を向上させるために新しい方法で活用されています。</p>
+    <div class="block-title text-center" data-aos="fade-up" data-aos-delay="200" data-aos-duration="600">サービス</div>
+    <p class="desc text-center" data-aos="fade-up" data-aos-delay="400" data-aos-duration="600">NETKOはお客様のサービス開発における「足りない」を柔軟にサポートいたします。</p>
     <div class="content">
         <div class="col" data-aos="fade-up" data-aos-delay="200" data-aos-duration="600">
             <div class="accordion" id="accordionServices">
@@ -201,12 +200,12 @@
 
 <section class="block_approach">
     <div class="container">
-        <div class="block-title text-center" data-aos="fade-up" data-aos-delay="200" data-aos-duration="600">ソリューション</div>
-        <p class="desc text-center" data-aos="fade-up" data-aos-delay="400" data-aos-duration="600">様々なテクノロジーは、製品の品質を向上させるために新しい方法で活用されています。</p>
+        <div class="block-title text-center" data-aos="fade-up" data-aos-delay="200" data-aos-duration="600">システム開発の工程（流れ）</div>
+        <p class="desc text-center" data-aos="fade-up" data-aos-delay="400" data-aos-duration="600">ある程度、システム開発の工程の流れや、専門用語を知っているだけで、開発が円滑に進んだり、リスクを回避したりすることができます。</p>
         <div class="item-box">
             <div class="item" data-aos="fade-up" data-aos-delay="200" data-aos-duration="600">
                 <div class="numb">01</div>
-                <div class="title">要件定義</div>
+                <div class="title">要求定義</div>
                 <ul>
                     <li>ビジネス要件定義</li>
                     <li>システム要件定義</li>
@@ -216,27 +215,30 @@
             </div>
             <div class="item" data-aos="fade-up" data-aos-delay="400" data-aos-duration="600">
                 <div class="numb">02</div>
-                <div class="title">設計と実装</div>
+                <div class="title">設計</div>
                 <ul>
-                    <li>基本設計</li>
-                    <li>詳細設計</li>
+                    <li>外部設計</li>
+                    <li>内部設計</li>
                 </ul>   
             </div>
             <div class="item" data-aos="fade-up" data-aos-delay="600" data-aos-duration="600">
                 <div class="numb">03</div>
                 <div class="title">実装</div>
                 <ul>
-                    <li>製造開発</li>
-                    <li>検証データ移行</li>
+                    <li>プログラミング</li>
+                    <li>単体テスト</li>
                     <li>総合検証</li>
+                    <li>結合テスト</li>
+                    <li>システム（総合）テスト</li>
+                    <li>運用テスト</li>
                 </ul>
             </div>
             <div class="item" data-aos="fade-up" data-aos-delay="800" data-aos-duration="600">
                 <div class="numb">04</div>
                 <div class="title">リリースとメンテナンス</div>
                 <ul>
-                    <li>リリース</li>
-                    <li>保守運用</li>
+                    <li>システム移行（リリース）</li>
+                    <li>運用・保守</li>
                 </ul>
             </div>
         </div>
