--- a/solutions.html
+++ b/solutions.html
@@ -100,17 +100,16 @@
 
 <section class="heading">
     <div class="container">
-        <h1>アジアを代表するデジタル化支援会社</h1>
-        <p>我々は、日本の有力サービス (SaaS)ベンダー 、 パッケージベンダーなど200社以上のIT企業に対して 高品質な開発サービスを提供し、日本のIT産業のビジネス拡大に大きくに貢献しています。</p>
+        <h1>SOLUTION</h1>
+        <p>課題から探す</p>
     </div>
 </section>
 
 <section class="container">
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#">ジャパン</a></li>
-            <li class="breadcrumb-item"><a href="#">会社情報</a></li>
-            <li class="breadcrumb-item active" aria-current="page">ご挨拶</li>
+            <li class="breadcrumb-item"><a href="#">TOP</a></li>
+            <li class="breadcrumb-item active" aria-current="page">ソリューション</li>
         </ol>
     </nav>
 </section>
