--- a/index.html
+++ b/index.html
@@ -101,25 +101,18 @@
 <section class="main-slider">
     <div class="swiper mainSwiper">
         <div class="swiper-wrapper">
-            <div class="swiper-slide" style="background: url('./img/main_slider.jpg') no-repeat center center">
+            <div class="swiper-slide" style="background: url('./img/service-slide-banner.jpg') no-repeat center center">
                 <div class="slide-content">
                     <h2 class="slider-title">御社専属の開発チームをベトナムに</h2>
-                    <p class="desc">我々は、日本の有力サービス (SaaS)ベンダー 、 パッケージベンダーなど200社以上のIT企業に対して 高品質な開発サービスを提供し、日本のIT産業のビジネス拡大に大きくに貢献しています。</p>
-                    <a href="#" class="btn btn-outline-white">無料相談</a>
+                    <p class="desc">我々は、日本の有力サービス (SaaS)ベンダー 、 パッケージベンダーなど社以上のIT企業に対して 高品質な開発サービスを提供し、日本のIT産業のビジネス拡大に大きくに貢献しています。</p>
+                    <a href="#" class="btn btn-outline-white">続きを見る</a>
                 </div>
             </div>
-            <div class="swiper-slide" style="background: url('./img/main_slider.jpg') no-repeat center center">
+            <div class="swiper-slide" style="background: url('./img/covid-19-slide-banner.jpg') no-repeat center center">
                 <div class="slide-content">
-                    <h2 class="slider-title">御社専属の開発チームをベトナムに</h2>
-                    <p class="desc">我々は、日本の有力サービス (SaaS)ベンダー 、 パッケージベンダーなど200社以上のIT企業に対して 高品質な開発サービスを提供し、日本のIT産業のビジネス拡大に大きくに貢献しています。</p>
-                    <a href="#" class="btn btn-outline-white">無料相談</a>
-                </div>
-            </div>
-            <div class="swiper-slide" style="background: url('./img/main_slider.jpg') no-repeat center center">
-                <div class="slide-content">
-                    <h2 class="slider-title">御社専属の開発チームをベトナムに</h2>
-                    <p class="desc">我々は、日本の有力サービス (SaaS)ベンダー 、 パッケージベンダーなど200社以上のIT企業に対して 高品質な開発サービスを提供し、日本のIT産業のビジネス拡大に大きくに貢献しています。</p>
-                    <a href="#" class="btn btn-outline-white">無料相談</a>
+                    <h2 class="slider-title">新型コロナウイルス感染症（COVID-19）への対応について</h2>
+                    <p class="desc">Our Response to COVID-19</p>
+                    <a href="#" class="btn btn-outline-white">続きを見る</a>
                 </div>
             </div>
         </div>
@@ -480,7 +473,9 @@
 <!--    </div>-->
 <!--</section>-->
 
-<section class="block_img"></section>
+<section class="block_img">
+    <!-- <p class="desc">Hello world!</p> -->
+</section>
 
 <section class="container block_06">
     <div class="block-title text-center" data-aos="fade-up" data-aos-delay="200" data-aos-duration="600">Blogs</div>
@@ -489,7 +484,7 @@
             <a href="#" class="img"><img src="./img/block_06_1.jpg" alt=""/></a>
             <div class="content">
                 <span class="date">April 4, 2019</span>
-                <a href="#" class="name">新しいサービスを開発したい</a>
+                <a href="#" class="name">Shopifyモバイルアプリテンプレート</a>
                 <p class="desc">お客様のご要望に応じて、システム開発、ITツールの導入支援から、運用者様のリテラシー教育まで幅広く業務効率化を支援いたします。</p>
             </div>
         </div>
