--- a/detail.html
+++ b/detail.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
-    <title>Netko - News</title>
+    <title>Netko - Detail</title>
     <link rel='shortcut icon' type='image/x-icon' href='./img/favicon.ico' />
     <link rel="icon" type="image/png" href="./img/favicon.png" />
     <meta name='robots' content='max-image-preview:large' />
@@ -115,35 +115,36 @@
 </section>
 
 <section class="block_news container">
-    <div class="block list_content">
-        <a class="list_item" src="">
-            <div class="thumb">
-                <img src="/img/main_slider.jpg" alt="ベトナム発スタートアップ・レリパのブロックチェーンサービスとリリース間近のNFTゲーム「Widiland」をご紹介！">
-            </div>
-            <div class="list_item-text">
-                <div class="list_item-date">2021.12.29</div>
-                <h2 class="list_item-title">ベトナム発スタートアップ・レリパのブロックチェーンサービスとリリース間近のNFTゲーム「Widiland」をご紹介！</h2>
-                <p class="list_item-preview">ベトナム発のスタートアップ・株式会社レリパが、2022年1月にNFTゲーム「Widiland」をリリースします。レリパは、2016年の創業以来、日本企業に特化したオフショア開発を専門とした事業展開を行なっており、2021年1月からは、すでにブロックチェーンサービスを開始しています。</p>
-            </div>
-        </a>
-        <a class="list_item" src="">
-            <div class="thumb">
-                <img src="/img/main_slider.jpg" alt="ベトナム発スタートアップ・レリパのブロックチェーンサービスとリリース間近のNFTゲーム「Widiland」をご紹介！">
-            </div>
-            <div class="list_item-text">
-                <div class="list_item-date">2021.12.29</div>
-                <h2 class="list_item-title">ベトナム発スタートアップ・レリパのブロックチェーンサービスとリリース間近のNFTゲーム「Widiland」をご紹介！</h2>
-                <p class="list_item-preview">ベトナム発のスタートアップ・株式会社レリパが、2022年1月にNFTゲーム「Widiland」をリリースします。レリパは、2016年の創業以来、日本企業に特化したオフショア開発を専門とした事業展開を行なっており、2021年1月からは、すでにブロックチェーンサービスを開始しています。</p>
-            </div>
-        </a>
-        <div class="pagination">
-            <a href="">&lt;&lt;</a>
-            <a href="">&lt;</a>
-            <a href="">2</a>
-            <a class="current" href="">3</a>
-            <a class="disable" href="">4</a>
-            <a href="">&gt;</a>
-            <a href="">&gt;&gt;</a>
+    <div class="block detail">
+        <div class="detail-date list_item-date">2022.01.06</div>
+        <h1 class="detail-title">
+            ベトナム発スタートアップ・レリパのブロックチェーンサービスとリリース間近のNFTゲーム「Widiland」をご紹介！
+        </h1>
+        <div class="detail-thumb">
+            <img src="/img/main_slider.jpg" alt="ベトナム発スタートアップ・レリパのブロックチェーンサービスとリリース間近のNFTゲーム「Widiland」をご紹介！">
+        </div>
+        <div class="detail-content">
+            ベトナム発のスタートアップ・株式会社レリパ（以下レリパ　本社：東京都渋谷区　取締役社長：チャン・スアン・ドゥック）が、2022年1月にNFTゲーム「Widiland」をリリースします。レリパは、2016年の創業以来、日本企業に特化したオフショア開発を専門とした事業展開を行なっており、2021年1月からは、すでにブロックチェーンサービスを開始しています。
+            金融、医療、物流など、今や数々の先進的な課題解決策としてブロックチェーン技術を活用する意義は計り知れません。レリパでは創業以来、ブロックチェーンの将来的なポテンシャルに着目しており、時代を先取りすべく優秀なブロックチェーンエンジニアの育成に力を入れてきました。 
+            スマートコントラクトの構築を可能にした暗号資産・イーサリアムの登場により、仮想通貨市場は、単なる通貨取引にとどまらず、NFT（Non Fungible Token）やDefi（分散型金融）といった新たなパラダイムを切り開くことに成功しました。とくに2021年3月にNFTによるデジタル絵画が約75億円で落札されたセンセーショナルなニュースは、記憶に新しいことでしょう。 
+            これにより一気にNFT市場が活気づき、その影響は、絵画のみならず、動画や音楽、ゲームにまで波及しました。この動きに先駆けて、レリパでは、同年1月にブロックチェーンサービスを開始。すでに複数の企業から問い合わせや新規プロジェクトのご依頼をいただいております。 
+            サービスの具体的な内容は、
+            ・ウォレット開発
+            ・スマートコントラクト開発
+            ・ICO・IEO・IDO開発
+            ・ゲームをNFT化
+            ・NFTアイテム販売支援
+            ・DApps開発」
+            になります。
+            <a href="">jaqewrqwerqerdfkjaso</a>
+            「ブロックチェーンを導入したいけれど方法がわからない」「資産をNFT化したい」「ブロックチェーンを構築できるエンジニアがいない」など、構想はあるものの具体的な一歩が踏み出せずもどかしい思いをしておられるクライアントの多さに驚かされます。しかし、そう言いながら手をこまねいているうちに、次々と新たなブロックチェーンがローンチされ、ビジネスの競争相手に先を越されるのは、大きな機会損失につながり、あまりにも惜しく勿体ないことです。 
+            そこでレリパでは、独自の仮想通貨の発行、ICOによる資金調達や独自トークンのIDO支援、加えてスマートコントラクトの実装、マーケットプレイス立ち上げ、NFTゲームをはじめとするDApps開発など、ブロックチェーンエコシステムの構築とマネタイズを全力でお手伝いしています。 
+            なぜレリパのブロックチェーン開発を選択するのか？
+            レリパのオフショアによる開発事業は、90％という高リピート率を誇ります。豊富な開発経験に裏打ちされた提案力の高さ、レスポンスの早さ、そして納期遵守の徹底ぶりが多くのクライアント様から高く評価されています。 
+            くわえて国内相場の30〜70％の人件コストの安さで予算削減にコミットし、高い日本語力による違和感のないコミュニケーションで安心してブロックチェーン開発をお任せいただいております。 
+            その弊社が、現在手掛けているブロックチェーンサービスの具体例をご紹介しましょう。
+            Widilandの配信を開始
+            <img src="/img/solution_01.jpg" alt="ベトナム発スタートアップ・レリパのブロックチェーンサービスとリリース間近のNFTゲーム「Widiland」をご紹介！">
         </div>
     </div>
     <div class="block">
