update solution font size

--- a/solutions.html
+++ b/solutions.html
@@ -186,23 +186,23 @@
 <section class="block_solution">
     <div class="item" style="background: url('./img/solution_01.jpg') no-repeat center center; background-size: cover;" data-aos="fade-left" data-aos-delay="200" data-aos-duration="600">
         <div class="content">
-            <div class="desc">解決</div>
             <div class="name">オフショア開発</div>
-            <a href="#" class="btn btn-outline-white">続きを見る</a>
+            <div class="desc">日本のエンジニア不足問題を解決するため、ダイナミックで優秀なエンジニアを提供します。エンジニアはベトナムの有名な大学を卒業してから、当社のトレーニングプログラムに参加して、後3ヶ月ぐらいNETKOの試験を受けて、合格すれば正社員として入社できます。</div>
+<!--            <a href="#" class="btn btn-outline-white">続きを見る</a>-->
         </div>
     </div>
     <div class="item" style="background: url('./img/solution_02.jpg') no-repeat center center; background-size: cover;" data-aos="fade-left" data-aos-delay="400" data-aos-duration="600">
         <div class="content">
-            <div class="desc">解決</div>
-            <div class="name">オフショア開発 B-O-T</div>
-            <a href="#" class="btn btn-outline-white">続きを見る</a>
+            <div class="name">Build・Operate・Transfer</div>
+            <div class="desc">NETKOでお客様の将来専用のチームをビルドし、運営します。チームの要員はNETKOの既存社員、お客様の社員または新規に採用した人材の組合せでも可能です。本チームは事前合意した期間でNETKOのインフラやプロセスを採用し、お客様の案件に対応します。この期間は、NETKOはお客様に事前に承諾した月単価などでご請求させていただきます。事前に合意した運営期間後にチーム全体をお客様に移譲させていただきます。</div>
+<!--            <a href="#" class="btn btn-outline-white">続きを見る</a>-->
         </div>
     </div>
     <div class="item" style="background: url('./img/solution_03.jpg') no-repeat center center; background-size: cover;" data-aos="fade-left" data-aos-delay="600" data-aos-duration="600">
         <div class="content">
-            <div class="desc">解決</div>
-            <div class="name">DXコンサル・DXサービス</div>
-            <a href="#" class="btn btn-outline-white">続きを見る</a>
+            <div class="name">ＤＸコンサル・ＤＸサービス</div>
+            <div class="desc">NETKOのDXコンサルティングサービスはデータを分析する上で必要なノウハウとデジタルテクノロジーを活用して、顧客の真のニーズを捉えて早期にサービスを立上げ、改善を繰り返すことで顧客価値を高めます。DXに関する豊富な知識や経験を有した当社のエンジニア及びコンサルターはお客様の要件を全部満たします。</div>
+<!--            <a href="#" class="btn btn-outline-white">続きを見る</a>-->
         </div>
     </div>
 </section>
